# lemma

./: .gitignore  CLI_ARCHITECTURE_GUIDE.md  Cargo.toml  IMPROVEMENTS_SUMMARY.md  LICENSE  NEXT_STEPS_SETTINGS.md  PHASE2_COMPLETE.md  README.md  README_CN.md  SPARSE_CACHE.md  install.ps1  install.sh  justfile  pyproject.toml
.github/workflows/: cd.yml  ci.yml  release.yml  sparse-index.yml
crates/lemma-build/: Cargo.toml
crates/lemma-build/scripts/: extract_imports.lean
crates/lemma-build/src/: cache.rs  compiler.rs  context.rs  error.rs  facets.rs  lib.rs  module.rs  paths.rs  plan.rs  scheduler.rs  target.rs
crates/lemma-cli/: Cargo.toml
crates/lemma-cli/src/: cli.rs  help.rs  lib.rs
crates/lemma-config/: Cargo.toml
crates/lemma-config/src/: binaries.rs  config.rs  lib.rs  registry.rs  resolution.rs  settings.rs
crates/lemma-download/: Cargo.toml
crates/lemma-download/src/: download.rs  lib.rs  release.rs
crates/lemma-graph/: Cargo.toml
crates/lemma-graph/src/: error.rs  graph.rs  lib.rs
crates/lemma-install/: Cargo.toml
crates/lemma-install/src/: install.rs  lib.rs
crates/lemma-lakefile/: Cargo.toml
crates/lemma-lakefile/src/: error.rs  lib.rs  parser.rs  types.rs  validate.rs
crates/lemma-output/: Cargo.toml
crates/lemma-output/src/: lib.rs  progress.rs
crates/lemma-platform/: Cargo.toml
crates/lemma-platform/src/: arch.rs  lib.rs  os.rs
crates/lemma-rs/: Cargo.toml
crates/lemma-rs/src/: cli.rs  commands.rs  config.rs  help.rs  install.rs  main.rs  release.rs  settings.rs  toolchain.rs
crates/lemma-rs/src/commands/: build.rs  cache.rs  completions.rs  default.rs  dir.rs  fetch.rs  find.rs  init.rs  install.rs  link.rs  list.rs  override.rs  proxy_mode.rs  run.rs  self_update.rs  show.rs  uninstall.rs  update.rs  upgrade.rs  which.rs
crates/lemma-rs/src/sparse_cache/: mathlib.rs  mod.rs  r2_client.rs
crates/lemma-sparse-cache/: Cargo.toml
crates/lemma-sparse-cache/src/: dependency_analyzer.rs  mathlib.rs
crates/lemma-static/: Cargo.toml
crates/lemma-static/src/: env_vars.rs
crates/lemma-toolchain/: Cargo.toml
crates/lemma-toolchain/src/: lib.rs  toolchain.rs
docs/design/: build-system-plan.md
scripts/: generate_sparse_index.py
src/: archive.rs  cli.rs  commands.rs  config.rs  download.rs  errors.rs  github.rs  help.rs  install.rs  main.rs  release.rs  toolchain.rs
src/commands/: completions.rs  config.rs  default.rs  info.rs  init.rs  install.rs  link.rs  list.rs  override.rs  proxy.rs  proxy_mode.rs  run.rs  self_update.rs  show.rs  uninstall.rs  update.rs  which.rs
src/sparse_cache/: dependency_analyzer.rs  mathlib.rs
tests/suite/: cli_config.rs  cli_edge_cases.rs  cli_init.rs  cli_link.rs  cli_override.rs  cli_project.rs  cli_proxy.rs  cli_toolchain.rs  cli_uninstall.rs  mod.rs  test_helpers.rs
