[package]
name = "lemma-rs"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["PuQing <me@puqing.work>"]
repository = "https://github.com/AndPuQing/lemma.git"
description = "A modern Lean4 toolchain manager"

[[bin]]
name = "lemma"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "stream",
    "socks",
    "rustls-tls",
] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"
colored = "2.0"
rpassword = "7.3"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
zstd = "0.13"
sha2 = "0.10"
dirs = "5.0"
semver = "1.0"
regex = "1.10"
url = "2.5"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
