[workspace]
members = ["crates/*"]
resolver = "2"


[workspace.package]
version = "0.1.5"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["PuQing <me@puqing.work>"]
repository = "https://github.com/AndPuQing/lemma.git"

[workspace.dependencies]
lemma-cli = { path = "crates/lemma-cli" }
lemma-config = { path = "crates/lemma-config" }
lemma-toolchain = { path = "crates/lemma-toolchain" }
lemma-static = { path = "crates/lemma-static" }
lemma-platform = { path = "crates/lemma-platform" }
lemma-download = { path = "crates/lemma-download" }
lemma-install = { path = "crates/lemma-install" }

serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
config = { version = "0.15.7", features = ["toml"], default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "socks",
    "rustls-tls",
] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
clap_complete = "4.5"
colored = "2.0"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
zstd = "0.13"
dirs = "5.0"
semver = "1.0"
regex = "1.10"
url = "2.5"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.10"
atty = "0.2"
fs-err = "2.11"
target-lexicon = "0.12"

# Dev dependencies
tempfile = "3.10"
proptest = "1.6"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "warn"

[workspace.lints.clippy]
all = "warn"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
