[package]
name = "lemma-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
lemma-static.workspace = true
lemma-toolchain.workspace = true

# Configuration
anyhow.workspace = true
config = "0.14"
serde = { workspace = true, features = ["derive"] }
toml.workspace = true

# Path utilities
dirs.workspace = true

# Logging
tracing.workspace = true

# CLI integration
clap = { workspace = true, features = ["derive", "env"] }

# Terminal utilities
colored.workspace = true
atty.workspace = true

[lints]
workspace = true
