[package]
name = "lemma-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
lemma-static.workspace = true
lemma-toolchain.workspace = true

# Configuration
anyhow.workspace = true
config.workspace = true
serde = { workspace = true, features = ["derive"] }
toml.workspace = true

# Path utilities
dirs.workspace = true

# Binary resolution
which = "7.0"

# Logging
tracing.workspace = true

# CLI integration
clap = { workspace = true, features = ["derive", "env"] }

# Terminal utilities
colored.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
