[package]
name = "lemma-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Dependency graph utilities for Lemma build system"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
petgraph.workspace = true

[dev-dependencies]
tempfile.workspace = true
