[package]
name = "lemma-lakefile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Lakefile parser and data structures for Lemma"

[dependencies]
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
semver.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
