[package]
name = "lemma-output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
lemma-config = { path = "../lemma-config" }

# Output formatting
colored.workspace = true
indicatif.workspace = true

[lints]
workspace = true
