[package]
name = "lemma-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "lemma"
path = "src/main.rs"

[dependencies]
lemma-static = { path = "../lemma-static" }

serde.workspace = true
toml.workspace = true
reqwest.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
clap_complete.workspace = true
colored.workspace = true
flate2.workspace = true
tar.workspace = true
zip.workspace = true
zstd.workspace = true
dirs.workspace = true
semver.workspace = true
regex.workspace = true
url.workspace = true
indicatif.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rayon.workspace = true
atty.workspace = true

[dev-dependencies]
tempfile = "3.10"
proptest = "1.6"
