[package]
name = "lemma"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "lemma"
path = "src/main.rs"

[dependencies]
# Internal crates
lemma-cli.workspace = true
lemma-static.workspace = true
lemma-config.workspace = true
lemma-toolchain.workspace = true
lemma-download.workspace = true
lemma-install.workspace = true
lemma-output.workspace = true
lemma-sparse-cache.workspace = true
lemma-build.workspace = true
lemma-lakefile.workspace = true

# Core dependencies
anyhow.workspace = true
thiserror.workspace = true

# CLI
clap.workspace = true
clap_complete.workspace = true
colored.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
dirs.workspace = true
regex.workspace = true
rayon.workspace = true
url.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
fs-err.workspace = true

# Async runtime for native build
tokio = { version = "1.40", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
