[package]
name = "lemma-sparse-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
lemma-static.workspace = true
lemma-download.workspace = true
lemma-install.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Regex for parsing
regex.workspace = true

# Terminal
colored.workspace = true

# Parallel processing
rayon.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
